--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Basic
-title: Vno Jekyll
-subtitle: my first blog
+title: Aknife: my first blog
 welcome_message:    
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
@@ -13,7 +12,7 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: red
+cover_color: blue
 
 # The blog button should not be removed.
 blog_button:
@@ -41,7 +40,7 @@ social:
     github: onevcat
     twitter: onevcat
     gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    mail: 2779281467@qq.com
 
 # Google Analytics
 ga:
