--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Basic
-title: Aknife: my first blog
-welcome_message:    
+title: Aknife
+subtitle: My First Blog
+welcome_message:
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
 
@@ -12,7 +13,7 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: blue
+cover_color: 
 
 # The blog button should not be removed.
 blog_button:
