--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
-title: Aknife
-subtitle: My First Blog
-welcome_message:
+title: Vno Jekyll
+subtitle: A blog-orientation theme for Jekyll
+welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
 
@@ -13,7 +13,7 @@ permalink: /:year/:month/:title/
 highlighter: rouge
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: 
+cover_color: red
 
 # The blog button should not be removed.
 blog_button:
@@ -41,7 +41,7 @@ social:
     github: onevcat
     twitter: onevcat
     gplus: 107108267983477358170
-    mail: 2779281467@qq.com
+    mail: onev@onevcat.com
 
 # Google Analytics
 ga:
