--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 title: Aknife
-subtitle: The Personal Blog of Aknife
+subtitle: The Personal Blog for Aknife
 welcome_message: <a href="#" target="_blank">Welcome!</a>
 description: Vno Jekyll is a port of Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
